--- a/report/style.css
+++ b/report/style.css
@@ -29,7 +29,7 @@ table th {
 
 table thead tr th div {
   padding-bottom: 1px !important; /* had to put important because kable's add_header_above puts some styling, and seems can not be avoided */
-  border-bottom: none !important; 
+  border-bottom: none !important;
   padding: 1px;
 }
 
@@ -89,7 +89,7 @@ table.report_info_table_class {
 .wrap-collabsible {
     margin-bottom: 1.2rem 0;
   }
-  
+
 input[type='checkbox'] {
 display: none;
 }
@@ -99,7 +99,7 @@ display: none;
     cursor: pointer;
     transition: all 0.25s ease-out;
     font-size: 0.9rem;
-    background-color: #2875B4; 
+    background-color: #2875B4;
     color: #fff;
     padding-left: 0.3rem;
     margin-bottom: 0.3rem;
@@ -210,7 +210,7 @@ border-bottom-left-radius: 0;
   color: #984EA3; }
 
 .oncokb.icon {
-  background-image: url(../oncoKb_icons.png);
+  background-image: url(/usr/report/oncoKb_icons.png);
   width: 18px;
   height: 18px;
   flex-shrink: 0;
